test/spec_vectors/table_get/fail/module_3.wat
(module (table $t 10 externref) (func $type-result-externref-vs-empty (table.get $t (i32.const 0))))